More work on the QT single model fit GUI. The view results tab now works

--- a/mdt/data/qt_designs/gui_single.qrc
+++ b/mdt/data/qt_designs/gui_single.qrc
@@ -1,5 +1,5 @@
 <RCC>
-  <qresource prefix="gui_single">
+  <qresource lang="English" prefix="gui_single">
     <file>../logo.gif</file>
   </qresource>
 </RCC>
