--- a/mdt/data/qt_designs/view_results_tab.ui
+++ b/mdt/data/qt_designs/view_results_tab.ui
@@ -14,6 +14,9 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="topMargin">
+    <number>11</number>
+   </property>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <property name="spacing">
@@ -39,7 +42,7 @@
         </font>
        </property>
        <property name="text">
-        <string>View a selection of maps in the given folder</string>
+        <string>View a selection of maps in the given folder.</string>
        </property>
       </widget>
      </item>
@@ -215,7 +218,14 @@
         </layout>
        </item>
        <item>
-        <widget class="QSpinBox" name="initialDimensionChooser"/>
+        <widget class="QSpinBox" name="initialDimensionChooser">
+         <property name="maximum">
+          <number>2</number>
+         </property>
+         <property name="value">
+          <number>2</number>
+         </property>
+        </widget>
        </item>
        <item>
         <spacer name="horizontalSpacer_2">
