Finished brain mask generation tab

--- a/mdt/data/qt_designs/view_results_tab.ui
+++ b/mdt/data/qt_designs/view_results_tab.ui
@@ -46,20 +46,20 @@
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="Line" name="line">
-       <property name="frameShadow">
-        <enum>QFrame::Sunken</enum>
-       </property>
-       <property name="lineWidth">
-        <number>1</number>
-       </property>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
     </layout>
+   </item>
+   <item>
+    <widget class="Line" name="line">
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="lineWidth">
+      <number>1</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
@@ -321,6 +321,7 @@
   <zorder>formLayoutWidget</zorder>
   <zorder>horizontalLayoutWidget</zorder>
   <zorder>line_2</zorder>
+  <zorder>line</zorder>
  </widget>
  <resources/>
  <connections/>
