--- a/mdt/data/qt_designs/view_results_tab.ui
+++ b/mdt/data/qt_designs/view_results_tab.ui
@@ -261,6 +261,20 @@
         <widget class="QSpinBox" name="initialSliceChooser"/>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_5">
+         <property name="leftMargin">
+          <number>3</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="maximumIndexLabel">
+           <property name="text">
+            <string>/ x</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
         <spacer name="horizontalSpacer_4">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -315,14 +329,19 @@
     </layout>
    </item>
   </layout>
-  <zorder>verticalLayoutWidget</zorder>
-  <zorder>label</zorder>
-  <zorder>label</zorder>
-  <zorder>formLayoutWidget</zorder>
-  <zorder>horizontalLayoutWidget</zorder>
   <zorder>line_2</zorder>
   <zorder>line</zorder>
  </widget>
+ <tabstops>
+  <tabstop>selectFolderButton</tabstop>
+  <tabstop>selectedFolderText</tabstop>
+  <tabstop>selectMaps</tabstop>
+  <tabstop>deselectAllButton</tabstop>
+  <tabstop>invertSelectionButton</tabstop>
+  <tabstop>initialDimensionChooser</tabstop>
+  <tabstop>initialSliceChooser</tabstop>
+  <tabstop>viewButton</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
