--- a/mdt/data/qt_designs/generate_protocol_tab.ui
+++ b/mdt/data/qt_designs/generate_protocol_tab.ui
@@ -298,9 +298,9 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QPushButton" name="saveButton">
+      <widget class="QPushButton" name="loadGB">
        <property name="text">
-        <string>Save as</string>
+        <string>Load g &amp;&amp; b</string>
        </property>
       </widget>
      </item>
@@ -315,6 +315,20 @@
       <widget class="QPushButton" name="loadColumnButton">
        <property name="text">
         <string>Add / Update column</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="saveButton">
+       <property name="text">
+        <string>Save as</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="clearButton">
+       <property name="text">
+        <string>Clear</string>
        </property>
       </widget>
      </item>
@@ -337,9 +351,6 @@
  </widget>
  <tabstops>
   <tabstop>protocol_table</tabstop>
-  <tabstop>saveButton</tabstop>
-  <tabstop>loadProtocolButton</tabstop>
-  <tabstop>loadColumnButton</tabstop>
  </tabstops>
  <resources/>
  <connections/>
