--- a/mdt/data/qt_designs/gui_single.ui
+++ b/mdt/data/qt_designs/gui_single.ui
@@ -62,11 +62,11 @@
         </sizepolicy>
        </property>
        <property name="currentIndex">
-        <number>4</number>
+        <number>0</number>
        </property>
-       <widget class="QWidget" name="runModelTab">
+       <widget class="QWidget" name="fitModelTab">
         <attribute name="title">
-         <string>Run model</string>
+         <string>Fit model</string>
         </attribute>
        </widget>
        <widget class="QWidget" name="generateBrainMaskTab">
@@ -184,6 +184,8 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <addaction name="action_RuntimeSettings"/>
+    <addaction name="separator"/>
     <addaction name="action_saveLog"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
@@ -204,6 +206,11 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="action_RuntimeSettings">
+   <property name="text">
+    <string>&amp;Runtime settings</string>
    </property>
   </action>
  </widget>
