Renamed the GUI single to simply GUI. This because we in the future will only have one GUI for MDT

--- a/mdt/data/qt_designs/fit_model_tab.ui
+++ b/mdt/data/qt_designs/fit_model_tab.ui
@@ -333,6 +333,13 @@
  <tabstops>
   <tabstop>selectDWI</tabstop>
   <tabstop>selectedDWI</tabstop>
+  <tabstop>selectMask</tabstop>
+  <tabstop>selectedMask</tabstop>
+  <tabstop>selectProtocol</tabstop>
+  <tabstop>selectedProtocol</tabstop>
+  <tabstop>selectOutputFolder</tabstop>
+  <tabstop>selectedOutputFolder</tabstop>
+  <tabstop>modelSelection</tabstop>
   <tabstop>runButton</tabstop>
  </tabstops>
  <resources/>
