--- a/mdt/data/qt_designs/main_gui.qrc
+++ b/mdt/data/qt_designs/main_gui.qrc
@@ -1,5 +1,5 @@
 <RCC>
-  <qresource lang="English" prefix="gui_single">
+  <qresource prefix="main_gui" lang="English">
     <file>../logo.gif</file>
     <file>icon_status_green.png</file>
     <file>icon_status_red.png</file>
