Adds the about dialog

--- a/mdt/data/qt_designs/main_gui.ui
+++ b/mdt/data/qt_designs/main_gui.ui
@@ -190,7 +190,14 @@
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>&amp;Help</string>
+    </property>
+    <addaction name="actionAbout"/>
+   </widget>
    <addaction name="menuMenu"/>
+   <addaction name="menuHelp"/>
   </widget>
   <action name="actionExit">
    <property name="text">
@@ -211,6 +218,11 @@
   <action name="action_RuntimeSettings">
    <property name="text">
     <string>&amp;Runtime settings</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
    </property>
   </action>
  </widget>
