Small updates to the GUI. Also, the GUI now writes the runtime settings to the GUI config file

--- a/mdt/data/qt_designs/runtime_settings_dialog.ui
+++ b/mdt/data/qt_designs/runtime_settings_dialog.ui
@@ -39,7 +39,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Runtime settings for all compute operations</string>
+        <string>Runtime settings for all compute operations.</string>
        </property>
       </widget>
      </item>
