Updates to the GUI, started work on the new maps visualizer

--- a/mdt/data/qt_designs/model_fit/main_gui.ui
+++ b/mdt/data/qt_designs/model_fit/main_gui.ui
@@ -212,7 +212,7 @@
   </action>
   <action name="actionAbout">
    <property name="text">
-    <string>About</string>
+    <string>&amp;About</string>
    </property>
   </action>
  </widget>
